# flex_bt_turtlebot2_demo

./: CHANGELOG.rst  README.md
flex_bt_turtlebot2_demo/: CMakeLists.txt  package.xml
flex_bt_turtlebot2_demo_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flex_bt_turtlebot2_demo_bringup/behavior_trees/: blue_ball_behavior.xml  green_ball_behavior.xml  nav2_navigate_ball_w_battery_life.xml  nav2_navigate_w_detection_and_battery.xml  red_ball_behavior.xml
flex_bt_turtlebot2_demo_bringup/config/: turtlebot2_lds_2d.lua
flex_bt_turtlebot2_demo_bringup/launch/: cartographer.launch.py  nav2.launch.py  nav2_turtlebot.launch.py  rviz.launch.py  turtlebot_sim_battery.launch.py
flex_bt_turtlebot2_demo_bringup/param/: nav2_turtlebot_params.yaml
flex_bt_turtlebot2_demo_bringup/rviz/: flex_bt_turtlebot2_demo.rviz
flex_bt_turtlebot2_demo_bringup/scripts/: launch-ocs  launch-onboard  ocs-tmux  onboard-tmux
flex_bt_turtlebot2_demo_bringup/src/: simple_battery_status_publisher.cpp
flex_bt_turtlebot2_demo_bt/: CMakeLists.txt  package.xml
flex_bt_turtlebot2_demo_bt/conditions/: is_ball_visible.cpp  is_battery_low.cpp
flex_bt_turtlebot2_demo_bt/include/flex_bt_turtlebot2_demo_bt/conditions/: is_ball_visible.hpp
flex_bt_turtlebot2_demo_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flex_bt_turtlebot2_demo_flexbe_behaviors/config/: flexbe_config.json
flex_bt_turtlebot2_demo_flexbe_behaviors/flex_bt_turtlebot2_demo_flexbe_behaviors/: turtlebot2_nav2_bt_sm.py  turtlebot2_nav2_multi_bts_sm.py  turtlebot2_patrol_and_investigate_sm.py  turtlebot2_patrol_sm.py
flex_bt_turtlebot2_demo_flexbe_behaviors/manifest/: turtlebot2_nav2_bt.xml  turtlebot2_nav2_multi_bts.xml  turtlebot2_patrol.xml  turtlebot2_patrol_and_investigate.xml
flex_bt_turtlebot2_demo_flexbe_states/: CMakeLists.txt  package.xml  setup.cfg  setup.py
flex_bt_turtlebot2_demo_flexbe_states/flex_bt_turtlebot2_demo_flexbe_states/: charging_state.py  check_battery_life_state.py  get_waypoints_state.py  send_waypoints_state.py
flex_bt_turtlebot2_demo_flexbe_states/launch/: run_state_tests.launch.py
flex_bt_turtlebot2_demo_flexbe_states/test/: charging_state.test  check_battery_life_state.test  get_waypoints_state.test  send_waypoints_state.test
