<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flex_bt_turtlebot2_demo</name>
  <version>0.0.0</version>
  <description>
    Meta-package for demonstration of flexible_behavior_trees using ROS 2 Navigation 2 and
    CHRISLab TurtleBot2 setup in simulation and hardware
  </description>
  <author email="joshua.zutell.18@cnu.edu">jmz919</author>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>APACHE</license>
  <url type="bugtracker">https://github.com/CNURobotics/flex_bt_turtlebot2_demo/issues</url>
  <url type="repository">https://github.com/CNURobotics/flex_bt_turtlebot2_demo</url>
  <url type="website">https://github.com/CNURobotics/flex_bt_turtlebot2_demo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>navigation2</depend>
  <depend>flexbe_behavior_engine</depend>
  <depend>flexbe_app</depend>
  <depend>flexible_behavior_trees</depend>
  <depend>flex_bt_turtlebot2_demo_bringup</depend>
  <depend>flex_bt_turtlebot2_demo_bt</depend>
  <depend>flex_bt_turtlebot2_demo_flexbe_behaviors</depend>
  <depend>flex_bt_turtlebot2_demo_flexbe_state</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
